@@ -1,5 +1,6 @@
 V4.1.4 (in progress)
-[BUG] : Correct some bugs for better handling of HTTPS websites and cross HTTP and HTTPS websites on the same Automne
+[BUG] : Correct bug for better handling of HTTPS websites and cross HTTP and HTTPS websites on the same Automne
+[BUG] : Correct bug with external home page redirection
 
 V4.1.3 (02/05/2011)
 [BUG] : Correct bugs numbers: 1860, 2021, 2024, 2032, 2039, 2040, 2043, 2044 (see http://www.automne-cms.org/bug/)
